fixing a z-index and hover state filter bar issue

--- a/less/app.less
+++ b/less/app.less
@@ -359,7 +359,7 @@ h1,h2,h3,h4,h5,h6 {
 	}
 
 	p {
-		color: #999;
+		color: #fff;
 		font-size: .875rem;
 		text-transform: uppercase;
 		font-family: 'Knockout 31 4r';
@@ -1317,8 +1317,15 @@ h1,h2,h3,h4,h5,h6 {
         width: 100%;
         height: 4rem;
         border-top: 1px solid rgba(255, 255, 255, .3);
-        &:hover { cursor: pointer; }
+        color: rgba(255, 255, 255, .7);
 
+        .no-touch & {
+    		&:hover {
+                cursor: pointer;
+    			color: #fff;
+    			//background: lighten(@title-pink, 10%);
+    		}
+    	}
 
 
         .i-menu {
@@ -1328,15 +1335,13 @@ h1,h2,h3,h4,h5,h6 {
     		font-size: 1.5rem;
     		width: 5.1rem;
     		height: 4rem;
-    		line-height: 4rem;
-    		color: #fff;
+    		line-height: 3.5rem;
     		text-align: center;
         }
 
         p {
     		font-size: @font-size-base * 0.8;
     		font-family: "Knockout 31 4r";
-            color: rgba(255, 255, 255, .7);
             margin-top: 1rem;
             margin-left: 4.5rem;
 
@@ -1344,7 +1349,6 @@ h1,h2,h3,h4,h5,h6 {
                 font-weight: normal;
                 display: block;
                 text-transform: uppercase;
-                color: #fff;
                 font-size: @font-size-base * 0.7;
             }
 
@@ -1600,11 +1604,11 @@ h1,h2,h3,h4,h5,h6 {
 		width: 5.1rem;
 		height: 4rem;
 		line-height: 4rem;
-		color: #666; //#666;
+		color: #666;
 		text-align: center;
 
         .expand & {
-            color: #000;
+            color: @music-red-light;
         }
 
 		&:after {
